# streamscribe

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  setup-macos.sh  setup-nemo.sh  setup.sh  streamscribe.sh  transtream.sh
bot/: entrypoint.sh  join.py  multi.py  play.py  server.py
bot/static/: index.html
src/streamscribe/: __init__.py  __main__.py  cli.py  exceptions.py  pipeline.py
src/streamscribe/asr/: __init__.py  apple_engine.py  dedup.py  diarizer.py  engine.py  model.py  nemo_engine.py  transcriber.py
src/streamscribe/audio/: __init__.py  chunker.py  decoder.py  extractor.py
src/transtream/: __init__.py  __main__.py  cli.py  exceptions.py  pipeline.py
src/transtream/asr/: diarizer.py  model.py  output.py  transcriber.py
src/transtream/audio/: chunker.py  decoder.py  extractor.py
