[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamscribe"
version = "0.1.0"
description = "Live transcription of YouTube videos and streams using NeMo ASR"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "numpy",
]

[project.optional-dependencies]
cpu = [
    "torch",
    "torchaudio",
    "nemo_toolkit[asr]~=2.4.0",
]
gpu = [
    "torch",
    "torchaudio",
    "nemo_toolkit[asr]~=2.4.0",
]
apple = [
    "pyobjc-framework-Speech",
    "pyobjc-framework-AVFoundation",
]

[project.scripts]
streamscribe = "streamscribe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/streamscribe"]
